# OneDriveForLinux

./: .env  .gitignore  .pre-commit-config.yaml  README.md  architecture_plan.md  implementation_plan.md  pyproject.toml
app/: __init__.py  logging_utils.py
app/auth/: msal_client.py
app/graph/: __init__.py  onedrive_client.py
app/services/: __init__.py  notifier.py
app/storage/: config_store.py
app/sync/: __init__.py  engine.py
app/ui/: __init__.py  app.py  dialogs.py  main_window.py  models.py  settings_dialog.py
scripts/: cli.py  run_sync.py
tests/: test_auth_msal_client.py  test_scripts_cli.py  test_storage_config_store.py  test_sync_engine.py
